<resources>

    <string name="app_name">Yummy</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_yummy">Yummy</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="stvfirst">Enter first name :</string>
    <string name="setfirst">First name</string>
    <string name="stvlast">Enter last name:</string>
    <string name="setlast">Last name</string>
    <string name="stvmail">Email Address</string>
    <string name="setmail">Email:</string>
    <string name="stvuname">Enter Username:</string>
    <string name="setuname">Username</string>
    <string name="stvdob">Date of Birth:</string>
    <string name="stvgender">Gender:</string>
    <string name="srbmale">Male</string>
    <string name="srbfemale">Female</string>
    <string name="sbutsubmit">Submit</string>
    <string name="sbutcancel">Cancel</string>
    <string name="stvpass">Enter password:</string>
    <string name="setpass">Password</string>
    <string name="stvrepass">Re-enter password:</string>
    <string name="setrepass">Password</string>
    <string name="ltvuser">Username:</string>
    <string name="ltvpasss">Password:</string>
    <string name="letuser">Username</string>
    <string name="letpasss">Password</string>
    <string name="lbtnlog">Login</string>
    <string name="lbtncancel">Cancel</string>
    <string name="lbtnres">Reset</string>
    <string name="gbutret">Visit Restaurants</string>
    <string name="gbutstat">View status of your booking</string>
    <string name="gbtnst">View status of Hotels</string>
    <string name="gbtnbook">Book Table</string>
    <string name="gbtnabt">About</string>
    <string name="ttvtime">Time Remaining:</string>
    <string name="ttvtab">Table no</string>
    <string name="tbtnshwtab">Show Table</string>
    <string name="ttvnameres">Name of Restaurant:</string>
    <string name="htvres">Name of Restaurant:</string>
    <string name="hbtnback">Back</string>
    <string name="hbtnshow">Show</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_goto">Goto</string>
    <string name="title_activity_time_remaining">TimeRemaining</string>
    <string name="title_activity_animatn">Animatn</string>
    <string name="title_activity_hotel_info">Hotel_info</string>
    <string name="tbtnshow">Show</string>
    <string name="gtvres">Name of Restaurant:</string>
    <string name="bbtnbook">Book Table</string>
    <string name="bbtnback">Back</string>
    <string name="bbtnshow">Show</string>
    <string name="btvres">Name of Restaurant:</string>
    <string name="title_activity_book_table">Book_table</string>
    <string name="title_activity_popup">Popup</string>
    <string name="pbtnok">Close</string>
    <string name="title_activity_pass">Pass</string>
    <string name="atvabt">This application is made by Lakshay, Karan, Gagan and Arun</string>
    <string name="title_activity_about">About</string>

</resources>